change autocomplete v2 for train_trips and coaches
