# src/webserver/paths/autocomplete/v1.ts
@@ -6,7 +6,7 @@ type V1Request = { q: string }
 
 export default {
     handler: async ({ q }: V1Request): Promise<AutoCompleteResponseV1> => {
-        return (await v2.handler({ q })).map(e => e.guess)
+        return (await v2.handler({ q, types: ['train_vehicle'] })).map(e => e.guess)
     },
     argumentBuilder: (args: ParserArguments) => ({ q: args.getString('q') })
 }
